2007-05-17  Chris Toshok  <toshok@ximian.com>

	* ControlBindingsCollectionTest.cs: new test file, move a test
	from BindingTest here.

	* BindingTest.cs (DuplicateBindingAdd): move the test to
	ControlBindingsCollectionTest.

	* BindingManagerBaseTest.cs (BindingsTest): enable this test.
	passes now.

	* DataBindingTests.cs: define #WITH_BINDINGS, since we now seem to
	work with them.
	(TestInsertRowBeforeCurrent): ignore this test on 2.0 though, as
	we generate too many Binding.Format events.
	(TestColumnAdd): ignore this test on 1.1, until System.Data
	generates the proper (2) number of events causing us to emit
	MetadataChanged.

	* CurrencyManagerTest.cs (AddNew2): ignore this test for the time
	being.  it's hitting a System.Data exception which doesn't happen
	on MS.

2007-05-17  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* TextBoxTest.cs: BackColorTest: Fix it, we may get invalidates and
	  paints after a Form.Show ().

2007-05-17  Andreia Gaita  <avidigal@novell.com>

	* TabControlTest.cs: Ignore the enter/leave tests for a bit

2007-05-17  Andreia Gaita  <avidigal@novell.com>

	* TabControlTest.cs: Add tests for Enter/Leave events on tabpages

2007-05-17  Jonathan Pobst  <monkey@jpobst.com>

	* TreeViewImageIndexConverterTest.cs: Added.

2007-05-17  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripTextBoxTest.cs: Enable tests for auto complete and shortcuts
	enabled stuff.

2007-05-16  Jonathan Pobst  <monkey@jpobst.com>

	* ImageKeyConverterTest.cs: Added.
	* TreeViewImageKeyConverterTest.cs: Added.

2007-05-15  Jonathan Pobst  <monkey@jpobst.com>

	* TextBoxTest.cs: Add test for IsInputChar method.

2007-05-11  Gert Driesen  <drieseng@users.sourceforge.net>

	* ToolStripItemCollectionTest.cs: Removed duplicate test.

2007-05-11  Everaldo Canuto  <everaldo@simios.org>

	* ToolBarTest.cs: Add tests for toolbar size (horizontal and vertical),
	also test #81523.

2007-05-10  Everaldo Canuto  <everaldo@simios.org>

	* ToolBarTest.cs: CreateHandleTest added.
