@@ -1,3 +1,8 @@
+2007-05-17  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* ListBoxTest.cs: New test for some exceptions in
+	ListBox.ObjectCollection methods.
+
 2007-05-17  Chris Toshok  <toshok@ximian.com>
 
 	* ControlBindingsCollectionTest.cs: new test file, move a test
